Closed Bug 1684310 Opened 5 years ago Closed 5 years ago

Selecting a specific history entry from the dropdown may not cause a navigation

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Fission Milestone M7
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- wontfix
firefox85 --- wontfix
firefox86 --- fixed

People

(Reporter: jesup, Assigned: smaug)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

(this may be a front-end issue, and also may be fixed or moot).

With fission on, I was doing some browsing. Google search, then browsed to a bunch of pages. Went back 10 or so pages, then some more, all using the Back dropdown. Pulled down the dropdown again. Last entry shown was the google search. Selecting it did not cause navigation (repeatedly). Hitting Back N times did take me to the page. Forward and back work at this point. Forward, then using the Back dropdown to go back to google worked. Used the Forward dropdown to go forward about 8 sites, then tried to use the back dropdown to go back to google - again, no navigation happens.

It's not just google. There seem to be random-ish entries at any given point that selecting doesn't cause navigation.

Note: Old browser, Nov 8 2020.

Randell will check whether he can reproduce in a more recent Nightly build.

Nika recommends we change frontend code for Back button dropdown menu to look at session history instead of session store. That might not be the cause of this bug, but it is a good idea.

Flags: needinfo?(rjesup)

If you need help reproducing this bug, I seem to be able to reproduce it pretty reliably (when I have Fission enabled).

@ Kirk and Randell, when you next see this bug, can you please test whether Ctrl + clicking Back button works? That combination will use session history (to open a page in a new tab) instead of session store. That will isolate whether this is a bug in session store or session history (SHIP) code.

TBD whether session store is returning the wrong page or whether SHIP is failing to navigate to the page. Nika suspects this is a SHIP navigation bug because it's unlikely session store would return a wrong page.

Session store code is being rewritten for Fission M7 Beta. If this looks like a session store bug, let's wait for the rewrite and see if this bug goes away.

Severity: -- → S3
Fission Milestone: --- → M7
Flags: needinfo?(ksteuber)
Priority: -- → P3

Clearing needinfos because Nika can reproduce this bug. She clicked a bunch of page anchors in one long GitHub page and then tried to click the entry in the Back button's history menu.

This is a bug in SHIP not having the correct history entry when using Browser.goToIndex(1).

No longer depends on: fission-sessionstore
Flags: needinfo?(rjesup)
Flags: needinfo?(ksteuber)
Regressed by: 1670848
Has Regression Range: --- → yes
Assignee: nobody → bugs
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/27acf75c1d12 Selecting a specific history entry from the dropdown may not cause a navigation, r=jesup
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: