Bug 1684310 - Selecting a specific history entry from the dropdown may not cause a navigation, r=jesup

Differential Revision: https://phabricator.services.mozilla.com/D102503